--- a/package.json
+++ b/package.json
@@ -11,19 +11,34 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/themes": "^3.2.1",
     "ali-oss": "^6.22.0",
     "axios": "^1.8.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4",
     "@types/ali-oss": "^6.16.11",
     "@types/node": "^20",
@@ -31,7 +46,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "prisma": "^6.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
